--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RecyclerApp</string>
+    <string name="filter">filter</string>
+    <string name="sort">Sort</string>
 </resources>
